--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
         <p>Author:Amr Elsayed.</p>
         <p> Maharishi International University.</p>
         <p>Address: 1000 N 4th St. Fairfield, Iowa, 52557.</p>         
-        <a href="https://validator.w3.org/"> <img  src="img/w3c.png" alt="html validator"/></a>
+
+        <a
+        href="http://validator.w3.org/check/referer"> <img
+        src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+        alt="html validator"/></a>
     </footer>
 
 </html>
