--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
             <br>
           </div>
         </div>        
-    </body>
 
     <footer>
         <p> © Copyright 2023 Company Name. All rights reserved.</p>
@@ -45,10 +44,9 @@
         <p> Maharishi International University.</p>
         <p>Address: 1000 N 4th St. Fairfield, Iowa, 52557.</p>         
 
-        <a
-        href="http://validator.w3.org/check/referer"> <img
-        src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
-        alt="html validator"/></a>
+        <a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
     </footer>
+
+</body>
 
 </html>
