--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p>Author:Amr Elsayed.</p>
         <p> Maharishi International University.</p>
         <p>Address: 1000 N 4th St. Fairfield, Iowa, 52557.</p>         
-        <a href="http://validator.w3.org/check/referer"> 
+        <a href="https://validator.w3.org/nu/?doc=https://amrelsayed950.github.io/"> 
             <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
         </a>
     </footer>
