--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="silver-background">
             <ul>
               <li>Lab 01 - Home Page</li>
-              <li> <a href="#" target="_blank"> Lab 02 - About me  </a></li>                          
+              <li> <a href="https://amrelsayed950.github.io/lab2/about.html" target="_blank"> Lab 02 - About me  </a></li>                          
               <li> <a href="#" target="_blank"> Lab 03  </a></li>                                     
               <li> <a href="#" target="_blank"> Lab 04  </a></li>                                     
               <li> <a href="#" target="_blank"> Lab 05  </a></li>                                     
