--- a/lab2/about.html
+++ b/lab2/about.html
@@ -48,14 +48,6 @@
     </div>
 
 
-
-
-
-
-
-
-
-
     <div class="neighbors" > 
         <h3>Fun Facts About My Neighbors</h3>    
         <ul>
@@ -71,9 +63,9 @@
     </form>
     <br>
 
-    <a href="https://validator.w3.org/nu/?doc=https://amrelsayed950.github.io/lab2/about.html"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
+    <a href="https://validator.w3.org/nu/?doc=https://amrelsayed950.github.io/lab2/about.html"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"></a>
     <a href="https://jigsaw.w3.org/css-validator//validator?uri=https://amrelsayed950.github.io/lab2/about.html">
-        <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Validate" />
+        <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Validate">
     </a>
 
 </body>
