--- a/lab2b/pie.html
+++ b/lab2b/pie.html
@@ -107,9 +107,9 @@
 
         <div class="validator"> 
             <a href="https://validator.w3.org/nu/?doc=https://amrelsayed950.github.io/lab2b/pie.html">
-                <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>    
+                <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"></a>    
             <a href="https://jigsaw.w3.org/css-validator//validator?uri=https://amrelsayed950.github.io/lab2b/pie.html">
-                <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Validate" />
+                <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Validate" >
             </a>    
         </div>
 
