some bugs fixed, new features added.

--- a/lab2/about.html
+++ b/lab2/about.html
@@ -23,8 +23,18 @@
 
     <div class="movies" > 
         <h3>My Favorites Movies</h3>    
-        <ol>
-            <li><a href="https://www.imdb.com/title/tt5433140/?ref_=nv_sr_srsg_0"> FastX</a> </li>
+        <ol reversed>
+            <li>
+                <a href="https://www.imdb.com/title/tt5433140/?ref_=nv_sr_srsg_0"> FastX</a> 
+               
+               <ul>
+                <li>Director: Louis Leterrier</li>
+                <li>Genres: Action, Crime, Mystery, Thriller</li>
+                <li>Taglines: The Last Ride</li>
+               </ul>
+
+
+            </li>
             <li><a href="https://www.imdb.com/title/tt0816692/"> Interstellar</a> </li>
             <li><a href="https://www.imdb.com/title/tt9362722/?ref_=fn_al_tt_4"> Spider-Man: Across the Spider-Verse </a></li>
 
@@ -37,12 +47,12 @@
 
         <div class="choices">             
             <div class="choice"> 
-                <img src="img/happyDog.jpg" alt="">
+                <img src="img/happy.jpg" alt="">
                 <p>Happy</p>
             </div>
             <div class="choice"> 
-                <img src="img/relaxDog.jpg" alt="">
-                <p>Relax</p>
+                <img src="img/sad.png" alt="">
+                <p>Sad</p>
             </div>
         </div>                 
     </div>
