--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>TMNT - Rancid Tomatoes</title>
-		<meta charset="utf-8" />
-		<link href="css/movie.css" type="text/css" rel="stylesheet"/>
+		<meta charset="utf-8">
+		<link href="css/movie.css" type="text/css" rel="stylesheet">
 		<link rel="icon" href="img/rotten.gif" type="image/x-icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -13,7 +13,7 @@
 	<body>
 
 		<div id="banner">
-			<img src="img/banner.png" alt="Rancid Tomatoes" />
+			<img src="img/banner.png" alt="Rancid Tomatoes">
 		</div>
 
 		<h1 id="main-title">TMNT (2007)</h1>
@@ -24,13 +24,13 @@
 			<div class="col-right">
 
 				<div class="poster">
-					<img src="img/overview.png" alt="general overview" />
+					<img src="img/overview.png" alt="general overview">
 				</div>
 	
 				<dl id="right-content">
 	
 					<dt>STARRING</dt>
-					<dd>Patrick Stewart <br /> Mako <br /> Sarah Michelle Gellar <br /> Kevin Smith</dd>
+					<dd>Patrick Stewart <br> Mako <br> Sarah Michelle Gellar <br> Kevin Smith</dd>
 		
 					<dt>DIRECTOR</dt>
 					<dd>Kevin Munroe</dd>
@@ -74,7 +74,7 @@
 
 			
 			<div class="rotten radius">
-				<img class="radius" src="img/rottenbig.png" alt="Rotten" />
+				<img class="radius" src="img/rottenbig.png" alt="Rotten">
 				<span class="rotten-span"> 33% </span>
 			</div>
 		
@@ -84,23 +84,23 @@
 				<div class="review-left">
 				
 					<p class="reviews">
-						<img src="img/rotten.gif" alt="Rotten" />
+						<img src="img/rotten.gif" alt="Rotten">
 						<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
 					</p>
 						
 					<div class="comments box">	
-						<img class="box" src="img/critic.gif" alt="Critic" />											
-						<p class="box" id="lifted">Peter Debruge <br />
+						<img class="box" src="img/critic.gif" alt="Critic">											
+						<p class="box" id="lifted">Peter Debruge <br>
 							Variety </p> 
 					</div>
 			
 					<p class="reviews">
-						<img src="img/fresh.gif" alt="Fresh" />
+						<img src="img/fresh.gif" alt="Fresh">
 						<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
 					</p>
 	
 					<div class="comments box">	
-						<img class="box" src="img/critic.gif" alt="Critic" />											
+						<img class="box" src="img/critic.gif" alt="Critic">											
 						<p class="box" id="lifted">Todd Gilchrist <br />
 							IGN Movies </p> 
 					</div>
