some bugs fixed

--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -101,39 +101,39 @@
 	
 					<div class="comments box">	
 						<img class="box" src="img/critic.gif" alt="Critic">											
-						<p class="box" id="lifted">Todd Gilchrist <br />
+						<p class="box lifted">Todd Gilchrist <br>
 							IGN Movies </p> 
 					</div>
 			
 					<p class="reviews">
-						<img src="img/rotten.gif" alt="Rotten" />
+						<img src="img/rotten.gif" alt="Rotten">
 						<q>It stinks!</q>
 					</p>
 
 					<div class="comments box">	
-						<img class="box" src="img/critic.gif" alt="Critic" />											
-						<p class="box" id="lifted">Jay Sherman (unemployed) </p> 
+						<img class="box" src="img/critic.gif" alt="Critic">											
+						<p class="box lifted"">Jay Sherman (unemployed) </p> 
 					</div>
 		
 					<p class="reviews">
-						<img src="img/rotten.gif" alt="Rotten" />
+						<img src="img/rotten.gif" alt="Rotten">
 						<q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
 					</p>
 
 					<div class="comments box">	
-						<img class="box" src="img/critic.gif" alt="Critic" />											
-						<p class="box" id="lifted">Joshua Tyler <br />
+						<img class="box" src="img/critic.gif" alt="Critic">											
+						<p class="box lifted">Joshua Tyler <br>
 							CinemaBlend.com </p> 
 					</div>
 			
 					<p class="reviews">
-						<img src="img/rotten.gif" alt="Rotten" />
+						<img src="img/rotten.gif" alt="Rotten">
 						<q>YOUR REVIEW HERE</q>
 					</p>
 
 					<div class="comments box">	
-						<img class="box" src="img/critic.gif" alt="Critic" />											
-						<p class="box" id="lifted"> NAME <br />
+						<img class="box" src="img/critic.gif" alt="Critic">											
+						<p class="box lifted" > NAME <br>
 							PUBLICATION </p> 
 					</div>
 
@@ -143,36 +143,36 @@
 				<div class="review-right"> 
 
 					<p class="reviews">
-						<img src="img/rotten.gif" alt="Rotten" />
+						<img src="img/rotten.gif" alt="Rotten">
 						<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
 					</p>
 
 
 					<div class="comments box">	
-						<img class="box" src="img/critic.gif" alt="Critic" />											
-						<p class="box" id="lifted">	Jeannette Catsoulis <br />
+						<img class="box" src="img/critic.gif" alt="Critic">											
+						<p class="box lifted" >	Jeannette Catsoulis <br>
 						New York Times </p> 
 					</div>
 			
 					<p class="reviews">
-						<img src="img/rotten.gif" alt="Rotten" />
+						<img src="img/rotten.gif" alt="Rotten">
 						<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
 					</p>
 
 					<div class="comments box">	
 						<img class="box" src="img/critic.gif" alt="Critic" />											
-						<p class="box" id="lifted">	Ed Gonzalez <br />
+						<p class="box lifted">	Ed Gonzalez <br>
 						Slant Magazine </p> 
 					</div>
 			
 					<p class="reviews">
-						<img src="img/fresh.gif" alt="Fresh" />
+						<img src="img/fresh.gif" alt="Fresh">
 						<q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
 					</p>
 
 					<div class="comments box">	
-						<img class="box" src="img/critic.gif" alt="Critic" />											
-						<p class="box" id="lifted">	Mark Palermo <br />
+						<img class="box" src="img/critic.gif" alt="Critic">											
+						<p class="box lifted">	Mark Palermo <br>
 						Coast (Halifax, Nova Scotia) </p> 
 					</div>
 			
@@ -182,19 +182,19 @@
 					</p>
 
 					<div class="comments box">	
-						<img class="box" src="img/critic.gif" alt="Critic" />											
-						<p class="box" id="lifted">Steve Rhodes <br />
+						<img class="box" src="img/critic.gif" alt="Critic">											
+						<p class="box lifted">Steve Rhodes <br>
 							Internet Reviews </p> 
 					</div>
 			
 					<p class="reviews">
-						<img src="img/rotten.gif" alt="Rotten" />
+						<img src="img/rotten.gif" alt="Rotten">
 						<q>YOUR REVIEW HERE</q>
 					</p>
 
 					<div class="comments box">	
-						<img class="box" src="img/critic.gif" alt="Critic" />											
-						<p class="box" id="lifted">	NAME <br />
+						<img class="box" src="img/critic.gif" alt="Critic">											
+						<p class="box lifted">	NAME <br>
 							PUBLICATION </p> 
 					</div>
 				</div>				
@@ -209,7 +209,7 @@
 
 		<div id="validators">
 			<a href="https://validator.w3.org/nu/?doc=https://amrelsayed950.github.io/lab3/tmnt.html">
-			<img src="img/w3c-html.png" alt="html validator" />
+			<img src="img/w3c-html.png" alt="html validator">
 			</a>
 			<a href="https://jigsaw.w3.org/css-validator//validator?uri=https://amrelsayed950.github.io/lab3/tmnt.html">
 				<img src="img/w3c-css.png" alt="css validator">
