--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -112,7 +112,7 @@
 
 					<div class="comments box">	
 						<img class="box" src="img/critic.gif" alt="Critic">											
-						<p class="box lifted"">Jay Sherman (unemployed) </p> 
+						<p class="box lifted">Jay Sherman (unemployed) </p> 
 					</div>
 		
 					<p class="reviews">
@@ -160,7 +160,7 @@
 					</p>
 
 					<div class="comments box">	
-						<img class="box" src="img/critic.gif" alt="Critic" />											
+						<img class="box" src="img/critic.gif" alt="Critic">											
 						<p class="box lifted">	Ed Gonzalez <br>
 						Slant Magazine </p> 
 					</div>
@@ -177,7 +177,7 @@
 					</div>
 			
 					<p class="reviews">
-						<img src="img/rotten.gif" alt="Rotten" />
+						<img src="img/rotten.gif" alt="Rotten">
 						<q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
 					</p>
 
