--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -209,10 +209,10 @@
 
 		<div id="validators">
 			<a href="https://validator.w3.org/nu/?doc=https://amrelsayed950.github.io/lab3/tmnt.html">
-			<img src="img/w3c-html.png" alt="html validator">
+			<img class="validate"src="img/w3c-html.png" alt="html validator">
 			</a>
 			<a href="https://jigsaw.w3.org/css-validator//validator?uri=https://amrelsayed950.github.io/lab3/tmnt.html">
-				<img src="img/w3c-css.png" alt="css validator">
+				<img  class="validate" src="img/w3c-css.png" alt="css validator">
 			</a>
 		</div>
 
