--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
               <li> <a href="https://amrelsayed950.github.io/lab2/about.html" target="_self"> Lab 02 - About me  </a></li>                          
               <li> <a href="https://amrelsayed950.github.io/lab2b/pie.html" target="_self"> Lab 02 - Grandma's Lemon Meringue Pie recipe  </a></li>            
               <li> <a href="https://amrelsayed950.github.io/lab3/tmnt.html" target="_self"> Lab 03 - Movie Review</a></li>                                     
-              <li> <a href="https://amrelsayed950.github.io/lab4/grades.html" target="_self"> Lab 04 - Grades  </a></li>                                     
-              <li> <a href="https://amrelsayed950.github.io/lab4/signup.html" target="_self"> Lab 04 - nerdLuv  </a></li>                                     
+              <li> <a href="https://amrelsayed950.github.io/lab4ab/grades.html" target="_self"> Lab 04 - Grades  </a></li>                                     
+              <li> <a href="https://amrelsayed950.github.io/lab4ab/signup.html" target="_self"> Lab 04 - nerdLuv  </a></li>                                     
          
               <li> <a href="#" target="_self"> Lab 05  </a></li>                                     
               <li> <a href="#" target="_self"> Lab 06  </a></li>                                     
