--- a/lab4ab/grades.html
+++ b/lab4ab/grades.html
@@ -2,11 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>Grades Exercise</title>
 </head>
 
 <head>
-    <title>Retrieve Grade</title>
+    <title>Grades Exercise</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
@@ -16,7 +15,7 @@
     <div class="container">
     <form action="http://mumstudents.org/params.php">
         <fieldset>
-            <legend>Get Grade:</legend>
+            <legend>Grades Exercise</legend>
     
         <p>Name: <input type="text" name="name"></p>
         <p>Student ID: <input type="text" name="id"></p>
