--- a/lab4ab/grades.html
+++ b/lab4ab/grades.html
@@ -28,16 +28,16 @@
         <div>
             Choose Entry: 
             <input type="radio" name="entry" value="October" checked /> October
-            <input type="radio" name="entry" value="January" /> January
-            <input type="radio" name="entry" value="August" /> August
-            <input type="radio" name="entry" value="April" /> April
+            <input type="radio" name="entry" value="January" > January
+            <input type="radio" name="entry" value="August" > August
+            <input type="radio" name="entry" value="April" > April
         </div>
 
 
         <div>
-            confirm that you are not lying <input type="checkbox" name="isLying"/> 
+            confirm that you are not lying <input type="checkbox" name="isLying"> 
         </div>
-        <input type="submit" value="Get Grade!" />
+        <input type="submit" value="Get Grade!" >
     </fieldset>
     </form>
 
