--- a/lab4ab/grades.html
+++ b/lab4ab/grades.html
@@ -27,7 +27,7 @@
 
         <div>
             Choose Entry: 
-            <input type="radio" name="entry" value="October" checked /> October
+            <input type="radio" name="entry" value="October" checked > October
             <input type="radio" name="entry" value="January" > January
             <input type="radio" name="entry" value="August" > August
             <input type="radio" name="entry" value="April" > April
