--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
               <li> <a href="https://amrelsayed950.github.io/lab3/tmnt.html" target="_self"> Lab 03 - Movie Review</a></li>                                     
               <li> <a href="https://amrelsayed950.github.io/lab4ab/grades.html" target="_self"> Lab 04 - Grades  </a></li>                                     
               <li> <a href="https://amrelsayed950.github.io/lab4ab/signup.html" target="_self"> Lab 04 - nerdLuv  </a></li>                                     
-         
-              <li> <a href="#" target="_self"> Lab 05  </a></li>                                     
+              <li> <a href="https://amrelsayed950.github.io/lab5/tasklist/tasklist.html" target="_self"> Lab 05 - Task List</a></li> 
+              <li> <a href="https://amrelsayed950.github.io/lab5/tipcalc/tip.html" target="_self"> Lab 05 - Tip Calculator</a></li> 
+
               <li> <a href="#" target="_self"> Lab 06  </a></li>                                     
+              <li> <a href="#" target="_self"> Lab 07  </a></li>                                     
            
             </ul>
             <br>
