--- a/lab5/tipcalc/tip.html
+++ b/lab5/tipcalc/tip.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
-<html>
-<script>
-function calcTip() {
-	var subtotalElem = document.getElementById('subtotal');
-	var tipElem = document.getElementById('tip');
-	var totalElem = document.getElementById('total');    
-	var subtotal = parseFloat(subtotalElem.value) || 0;
-	var tip = ((parseFloat(tipElem.value) || 0) / 100) * subtotal;
-	var total = subtotal + tip;
-	totalElem.innerHTML = '$' + total;
-}
-
-</script>
+<html lang="en">
 	<head>
 		<title>Tip Calculator</title>
-		<link href="css/style.css" type="text/css" rel="stylesheet" />
+		<link href="css/style.css" type="text/css" rel="stylesheet" >
 	</head>
+	
 
 
-	<body>
-		<h1>
-			<img id="logo" src="img/calc.jpeg" alt="++--**//" />
-			  Tip Calculator
-		</h1>
 
-		<div>
-			<label><input id="subtotal" type="text" /> $ Subtotal</label>
-		</div>
+<body>
+	<h1>
+		<img id="logo" src="img/calc.jpeg" alt="++--**//" >
+		Tip Calculator
+	</h1>
 
-		<div>
-			<label><input id="tip" type="text" /> % Tip</label>
-		</div>
+	<div>
+		<label><input id="subtotal" type="text" > $ Subtotal</label>
+	</div>
 
-		<div>
-			<button id="btn"  onclick="calcTip();">Calculate Tip</button>
-		</div>
+	<div>
+		<label><input id="tip" type="text" > % Tip</label>
+	</div>
 
-		<hr />
+	<div>
+		<button id="btn" onclick="calcTip();">Calculate Tip</button>
+	</div>
 
-		<div>
-			<h2>Your total:</h2>
-			<p id="total">$0.00</p>
-		</div>
-	</body>
+	<hr>
+
+	<div>
+		<h2>Your total:</h2>
+		<p id="total">$0.00</p>
+	</div>
+</body>
+
+<script>
+	function calcTip() {
+		var subtotalElem = document.getElementById('subtotal');
+		var tipElem = document.getElementById('tip');
+		var totalElem = document.getElementById('total');
+		var subtotal = parseFloat(subtotalElem.value) || 0;
+		var tip = ((parseFloat(tipElem.value) || 0) / 100) * subtotal;
+		var total = subtotal + tip;
+		totalElem.innerHTML = '$' + total;
+	}
+</script>
+
+
 </html>
