some bugs fixed

--- a/lab5/tipcalc/tip.html
+++ b/lab5/tipcalc/tip.html
@@ -4,20 +4,6 @@
 		<title>Tip Calculator</title>
 		<link href="css/style.css" type="text/css" rel="stylesheet" >
 	</head>
-	
-	<script>
-		function calcTip() {
-			var subtotalElem = document.getElementById('subtotal');
-			var tipElem = document.getElementById('tip');
-			var totalElem = document.getElementById('total');
-			var subtotal = parseFloat(subtotalElem.value) || 0;
-			var tip = ((parseFloat(tipElem.value) || 0) / 100) * subtotal;
-			var total = subtotal + tip;
-			totalElem.innerHTML = '$' + total;
-		}
-	</script>
-	
-
 
 <body>
 	<h1>
@@ -45,6 +31,6 @@
 	</div>
 </body>
 
-
+<script src="js/tip.js"></script>
 
 </html>
