--- a/lab5/tipcalc/tip.html
+++ b/lab5/tipcalc/tip.html
@@ -29,8 +29,10 @@
 		<h2>Your total:</h2>
 		<p id="total">$0.00</p>
 	</div>
+
+	<script src="js/tip.js"></script>
 </body>
 
-<script src="js/tip.js">
+
 
 </html>
