--- a/lab5/tasklist/tasklist.html
+++ b/lab5/tasklist/tasklist.html
@@ -16,12 +16,12 @@
 
       <div class="container">
         <div class="col-50">
-          <dl>
-            <dd>
-            <dt><label>Task</label></dt>
+          <div>
+            <div>
+            <div><label>Task</label></div>
               <input required="required" class="input" type="text" id="task" name="task" placeholder="" maxlength="16">
-            </dd>
-          </dl>
+            </div>
+          </div>
           <button class="button" type="submit" onclick="addTask();">Add Task</button>
           <button class="button" type="submit" onclick="clearTasks();">Clear Tasks</button>
 
