--- a/lab6/decoratemytext.html
+++ b/lab6/decoratemytext.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Text Decorator</title>
 	
@@ -8,7 +8,7 @@
 		many useful functions which we need.
 		Please don't remove this link or change its URL; leave it as-is!
 		-->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
 		<!-- link to your script file here -->		
 		<link rel="stylesheet" href="decoratemytext.css">		
@@ -21,7 +21,7 @@
 	<body>
 		<h1>Text Decorator</h1>		
 		<div>
-			<img src="img/decorated.jpg" alt="very decorated!" />
+			<img src="img/decorated.jpg" alt="very decorated!">
 		</div>
 
 
