--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
               <li> <a href="https://amrelsayed950.github.io/lab5/tasklist/tasklist.html" target="_self"> Lab 05 - Task List</a></li> 
               <li> <a href="https://amrelsayed950.github.io/lab5/tipcalc/tip.html" target="_self"> Lab 05 - Tip Calculator</a></li> 
               <li> <a href="https://amrelsayed950.github.io/lab6/decoratemytext.html" target="_self"> Lab 06 - Decorate my text</a></li> 
+              <li> <a href="https://amrelsayed950.github.io/lab6/JavaScriptTimerExercises.pdf" target="_self"> Lab 06 - JavaScript Timer Exercises</a></li> 
 
               <li> <a href="#" target="_self"> Lab 06  </a></li>                                     
               <li> <a href="#" target="_self"> Lab 07  </a></li>                                     
