--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
               <li> <a href="https://amrelsayed950.github.io/lab6/decoratemytext.html" target="_self"> Lab 06 - Decorate my text</a></li> 
               <li> <a href="https://amrelsayed950.github.io/lab6/JavaScriptTimerExercises.pdf" target="_self"> Lab 06 - JavaScript Timer Exercises</a></li> 
               <li> <a href="https://amrelsayed950.github.io/lab7/bankAccount.html" target="_self"> Lab 07 - Bank Account Application</a></li>                                   
-           
+              <li> <a href="https://amrelsayed950.github.io/lab8/jQueryQuizI.pdf" target="_self"> Lab 08 - jQueryQuizI</a></li>                                   
+              <li> <a href="https://amrelsayed950.github.io/lab8/ascii.html" target="_self"> Lab 08 - ASCII Animation Viewer</a></li>                                   
+            
             </ul>
             <br>
           </div>
