some bugs fixed

--- a/lab8/ascii.html
+++ b/lab8/ascii.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html lang="en">
-<html>
+<!DOCTYPE html>
+<html lang="en"></html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" >
     <title>ASCIImation</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="ascii.css" type="text/css" rel="stylesheet" />
-    <script src="animations.js" type="text/javascript"></script>
-    <script src="ascii.js" type="text/javascript"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link href="ascii.css" type="text/css" rel="stylesheet" >
+    <script src="animations.js"></script>
+    <script src="ascii.js"></script>
   </head>
 
   <body>
@@ -42,7 +42,7 @@
       </fieldset>
       <fieldset>
         <legend>Speed:</legend>
-        <label><input id="turbo" type="checkbox" />Turbo</label>
+        <label><input id="turbo" type="checkbox" >Turbo</label>
       </fieldset>
     </div>
     <footer id="validate">
@@ -50,16 +50,16 @@
         <img
           src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
           alt="html validator"
-        />
+        >
       </a>
       <a href="https://jigsaw.w3.org/css-validator//validator?uri=https://amrelsayed950.github.io/lab8/ascii.html">
         <img
           src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png"
           alt="css validator"
-        />
+        >
       </a>
       <a href="http://webster.cs.washington.edu/jslint?uri=https://amrelsayed950.github.io/lab8/ascii.html">
-        <img src="images/jslint.png" alt="JavaScript Lint" />
+        <img src="images/jslint.png" alt="JavaScript Lint">
       </a>
     </footer>
   </body>
