--- a/lab8/ascii.html
+++ b/lab8/ascii.html
@@ -58,7 +58,7 @@
           alt="css validator"
         >
       </a>
-      <a href="http://webster.cs.washington.edu/jslint?uri=https://amrelsayed950.github.io/lab8/ascii.html">
+      <a href="https://webster.cs.washington.edu/jslint/?referer">
         <img src="images/jslint.png" alt="JavaScript Lint">
       </a>
     </footer>
