--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
               <li> <a href="https://amrelsayed950.github.io/lab7/bankAccount.html" target="_self"> Lab 07 - Bank Account Application</a></li>                                   
               <li> <a href="https://amrelsayed950.github.io/lab8/ascii.html" target="_self"> Lab 08 - ASCII Animation Viewer</a></li>                                   
               <li> <a href="https://amrelsayed950.github.io/lab8/jQueryQuizI.pdf" target="_self"> Lab 08 - jQueryQuizI</a></li>                                   
-              <li> <a href="https://amrelsayed950.github.io/lab8/jQueryQuizII.pdf" target="_self"> Lab 08 - jQueryQuizII.pdf</a></li>                                   
+              <li> <a href="https://amrelsayed950.github.io/lab8/jQueryQuizII.pdf" target="_self"> Lab 08 - jQueryQuizII.pdf</a></li>    
+              <li> <a href="https://amrelsayed950.github.io/lab9/jQueryQuizIII.pdf" target="_self"> Lab 09 - jQueryQuizIII.pdf</a></li>                                   
+              <li> <a href="https://amrelsayed950.github.io/lab9/maze.html" target="_self"> Lab 09 - The Amazing Mouse Maze!</a></li>                                   
             
             </ul>
             <br>
