--- a/lab9/maze.html
+++ b/lab9/maze.html
@@ -36,9 +36,9 @@
 	</p>
 	<div id="validator">
 
-		<a href="https://validator.w3.org/check?uri=https://navruzbeknoraliev.github.io/wap-course/maze/maze.html"><img
+		<a href="https://validator.w3.org/nu/?doc=https://amrelsayed950.github.io/lab9/maze.html"><img
 				src="https://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="Valid HTML5"></a>
-		<a href="https://validator.w3.org/check?uri=https://navruzbeknoraliev.github.io/wap-course/maze/maze.css"><img
+		<a href="https://validator.w3.org/nu/?doc=https://amrelsayed950.github.io/lab9/maze.css"><img
 				src="https://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="Valid CSS"></a>
 	</div>
 
