--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
               <li> <a href="https://amrelsayed950.github.io/lab8/jQueryQuizII.pdf" target="_self"> Lab 08 - jQueryQuizII.pdf</a></li>    
               <li> <a href="https://amrelsayed950.github.io/lab9/jQueryQuizIII.pdf" target="_self"> Lab 09 - jQueryQuizIII.pdf</a></li>                                   
               <li> <a href="https://amrelsayed950.github.io/lab9/maze.html" target="_self"> Lab 09 - The Amazing Mouse Maze!</a></li>                                   
-            
+              <li> <a href="https://amrelsayed950.github.io/lab12/fifteen.html" target="_self"> Lab 12 - 15 Puzzle</a></li>                                   
+              
             </ul>
             <br>
           </div>
