--- a/lab12/fifteen.html
+++ b/lab12/fifteen.html
@@ -1,16 +1,10 @@
 
 <!DOCTYPE html>
 <html>
-<!--
- 2/14/2015kl  Fifteen Puzzle
-You should not modify fifteen.html.  Your JS code should work with an
-unmodified version of this file.
--->
 <head>
     <title>Fifteen Puzzle</title>
     <meta charset="UTF-8">
     <!-- instructor-provided JavaScript files; do not modify -->
-    <!--<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 
 
@@ -49,9 +43,11 @@ unmodified version of this file.
 </p>
 
 <div class="footer">
-    <a href="http://validator.w3.org/check/referer"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="html validator"/></a>
-    <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="css validator"/></a>
-    <a href="http://mumstudents.org/jscheck/referer.php"><img src="http://mumstudents.org/jscheck/jscheck-small.png" alt="js validator"/></a>
+    <a href="https://validator.w3.org/nu/?doc=https://amrelsayed950.github.io/lab12/fifteen.html"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="html validator"/></a>
+    <a href="http://jigsaw.w3.org/css-validator/check?doc=https://amrelsayed950.github.io/lab12/fifteen.html"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="css validator"/></a>
+    <a href="http://mumstudents.org/jscheck/referer.php?doc=https://amrelsayed950.github.io/lab12/fifteen.html"><img src="http://mumstudents.org/jscheck/jscheck-small.png" alt="js validator"/></a>
 </div>
 </body>
 </html>
+
+
