--- a/fifteenpuzzle/fifteen.html
+++ b/fifteenpuzzle/fifteen.html
@@ -53,9 +53,9 @@
 
 		<div id="w3c">
             <div class="footer">
-                <a href="https://validator.w3.org/nu/?doc=https://amrelsayed950.github.io/lab12/fifteen.html"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="html validator"/></a>
-                <a href="http://jigsaw.w3.org/css-validator/check?doc=https://amrelsayed950.github.io/lab12/fifteen.html"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="css validator"/></a>
-                <a href="http://mumstudents.org/jscheck/referer.php?doc=https://amrelsayed950.github.io/lab12/fifteen.html"><img src="http://mumstudents.org/jscheck/jscheck-small.png" alt="js validator"/></a>
+                <a href="https://validator.w3.org/nu/?doc=https://amrelsayed950.github.io/fifteenpuzzle/fifteen.html"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="html validator"/></a>
+                <a href="http://jigsaw.w3.org/css-validator/check?doc=https://amrelsayed950.github.io/fifteenpuzzle/fifteen.html"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="css validator"/></a>
+                <a href="http://mumstudents.org/jscheck/referer.php?doc=https://amrelsayed950.github.io/fifteenpuzzle/fifteen.html"><img src="http://mumstudents.org/jscheck/jscheck-small.png" alt="js validator"/></a>
             </div>
 		</div>
 	</body>
