--- a/lab12/fifteen.html
+++ b/lab12/fifteen.html
@@ -1,16 +1,16 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Fifteen Puzzle</title>
     <meta charset="UTF-8">
     <!-- instructor-provided JavaScript files; do not modify -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
 
     <!-- your files that you will write -->
-    <link href="fifteen.css" type="text/css" rel="stylesheet" />
-    <script src="fifteen.js" type="text/javascript"></script>
+    <link href="fifteen.css" type="text/css" rel="stylesheet">
+    <script src="fifteen.js"></script>
 </head>
 
 <body>
@@ -43,9 +43,9 @@
 </p>
 
 <div class="footer">
-    <a href="https://validator.w3.org/nu/?doc=https://amrelsayed950.github.io/lab12/fifteen.html"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="html validator"/></a>
-    <a href="http://jigsaw.w3.org/css-validator/check?doc=https://amrelsayed950.github.io/lab12/fifteen.html"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="css validator"/></a>
-    <a href="http://mumstudents.org/jscheck/referer.php?doc=https://amrelsayed950.github.io/lab12/fifteen.html"><img src="http://mumstudents.org/jscheck/jscheck-small.png" alt="js validator"/></a>
+    <a href="https://validator.w3.org/nu/?doc=https://amrelsayed950.github.io/lab12/fifteen.html"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="html validator"></a>
+    <a href="https://validator.w3.org/nu/?doc=https://amrelsayed950.github.io/lab12/fifteen.html"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="css validator"></a>
+    <a href="http://mumstudents.org/jscheck/referer.php?doc=https://amrelsayed950.github.io/lab12/fifteen.html"><img src="http://mumstudents.org/jscheck/jscheck-small.png" alt="js validator"></a>
 </div>
 </body>
 </html>
