--- a/lab12/fifteen.html
+++ b/lab12/fifteen.html
@@ -45,7 +45,7 @@
 <div class="footer">
     <a href="https://validator.w3.org/nu/?doc=https://amrelsayed950.github.io/lab12/fifteen.html"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="html validator"></a>
     <a href="https://validator.w3.org/nu/?doc=https://amrelsayed950.github.io/lab12/fifteen.html"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="css validator"></a>
-    <a href="http://mumstudents.org/jscheck/referer.php?doc=https://amrelsayed950.github.io/lab12/fifteen.html"><img src="http://mumstudents.org/jscheck/jscheck-small.png" alt="js validator"></a>
+    <a href="https://webster.cs.washington.edu/jslint/?referer"><img src="http://mumstudents.org/jscheck/jscheck-small.png" alt="js validator"></a>
 </div>
 </body>
 </html>
