lab 14 added - Lab 14 - Astonomy Picture of the Day

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
               <li> <a href="https://amrelsayed950.github.io/lab9/jQueryQuizIII.pdf" target="_self"> Lab 09 - jQueryQuizIII.pdf</a></li>                                   
               <li> <a href="https://amrelsayed950.github.io/lab9/maze.html" target="_self"> Lab 09 - The Amazing Mouse Maze!</a></li>                                   
               <li> <a href="https://amrelsayed950.github.io/lab12/fifteen.html" target="_self"> Lab 12 - 15 Puzzle</a></li>                                   
+              <li> <a href="https://amrelsayed950.github.io/lab14/view.html" target="_self"> Lab 14 - Astonomy Picture of the Day - view version</a></li>                                   
+              <li> <a href="https://amrelsayed950.github.io/lab14/viewfetch.html" target="_self"> Lab 14 - Astonomy Picture of the Day - viewfetch version</a></li>                                   
               
             </ul>
             <br>
